test/fail/confidential-override.grace
constructor new {
  method name {}
}

object {
  inherits new

  method name is confidential {}
}
